<resources>
    <string name="app_name">LearnConnect</string>

    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign up</string>
    <string name="email_phone_number">Email/Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget password</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="email">Email</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_courses">My Courses</string>
    <string name="profile">Profile</string>
    <string name="course_image">Course Image</string>
    <string name="join_course">Join Course</string>
    <string name="total_courses">Total Courses :</string>
    <string name="category">Category:</string>
    <string name="go_to_favorite_courses">Go to Favorite Courses</string>
    <string name="drop_course">Drop Course</string>
    <string name="go_to_lessons">Go to Lessons</string>
    <string name="lessons">Lessons</string>
    <string name="lesson">Lesson</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="sign_out">Sign Out</string>

    <string-array name="filter_options">
        <item>Mobile App Development</item>
        <item>Artificial Intelligence</item>
        <item>Backend</item>
        <item>Clear All Filter</item>
    </string-array>
</resources>