<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".coursedetail.CourseDetailFragment">


    <TextView
        android:id="@+id/categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@id/courseImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/category"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <View
        android:id="@+id/underline"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="@id/categoryText"
        app:layout_constraintEnd_toEndOf="@id/categoryText"
        app:layout_constraintTop_toBottomOf="@id/categoryText"/>

    <TextView
        android:id="@+id/categoryNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_category_tag"
        android:padding="4dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@id/courseImage"
        app:layout_constraintStart_toEndOf="@id/categoryText"
        app:layout_constraintTop_toTopOf="parent"
        tools:text=" Computer Science" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFavoritesFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/light_red"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/courseImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/course_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addFavoritesFab"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/courseTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseImage"
        tools:text="Design Patterns" />

    <TextView
        android:id="@+id/courseDescription"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseTitle"
        tools:text="This is a Design Patterns Course. \nThere is two main section for this course:\n    -Behavioral Patterns\n    -Structural Patterns" />

    <Button
        android:id="@+id/joinCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/join_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>